# Codes

./: .directory  .gitignore  KMP_StringMathcing.cpp  LabTest1_2201202.cpp  a.out  abc  cf.cpp  cp.cpp  cses.cpp  hardik.txt  inputf.in  matrix.txt  newtxt.txt  outputf.in  temp.c  temp.cpp  temp2  temp2.c  tempCodeRunnerFile.cpp
AI Lab/: 2201202_EA4.py  performance.txt  q1_attempt2.py  state_matrix.txt
AlgoLab/: LabTestQ2_2201202.txt  MidSemQ5.cpp  MidSemQ6.cpp  MidSemQ8.cpp  README.md  StringMatching.cpp  ThreeClosestPair.cpp  a.out  abc.cpp  closestPair.out  closestPairHeader.h  codeforces.cpp  factorialOf50.cpp  factorial_gmp  fibo.cpp  hbd.cpp  input.txt  multi_threading.cpp  test.c  test11.cpp  test2.cpp  testing2.cpp  tesw.cpp
CF/: 62.cpp  a.cpp  a.out  b.cpp  cc.cpp  cf  cf.cpp  cf.sh  cf2.cpp  desired_output.txt  e.cpp  e32.cpp  e33.cpp  e34.cpp  e35.cpp  inputf.in  leetcodeTrailer.cpp  outputf.in  t  t.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  temp.cpp  tt.cpp  ttt.cpp
CMakeTest/: CMakeLists.txt  graph.cpp
CloudComputingLab/: help.txt
IT Workshop/: LabQ1.java  abv.java  file1.txt  file2.txt
JS/: index.html  index.js  prac2.js  prac3.js  tempCodeRunnerFile.js
LLD/: lld_cache.cpp  lld_tictactoe.cpp
ML_Lab/: a.py  activate_script  temp.py  tempp.py
MidSemLabAlgo/: midSemLabQ1.cpp
NetworksLab/: a.out  customGetRequest.py
OS/Lab 1/: CMakeLists.txt  aa  ans  b.txt  pipe.c  q2.c  q2.txt  q3.c  q3.txt  q4.c  tempCodeRunnerFile.c  test.c  test2.c  testTemp.txt
OS/Lab 1/q4Alternate/: input.txt
OS/Lab 1/q5Alternate/: a
PA1/: matrix.txt  pa1.ipynb
(+556 files in other folders)
